[package]
name = "spawn-wasm-ecdsa"
version = "0.1.0"
edition = "2021"
description = "A WASM-based ECDSA signature verification library for Web3 developers."
license = "MIT"
repository = "https://github.com/nzengi/spawn-wasm-ecdsa"
documentation = "https://docs.rs/spawn-wasm-ecdsa"
homepage = "https://github.com/nzengi/spawn-wasm-ecdsa"
readme = "README.md"
keywords = ["ECDSA", "WASM", "blockchain", "WebAssembly", "Rust", "Signature Verification"]
categories = ["cryptography", "web-programming"]
authors = ["nzengi <zenginureddin1@gmail.com>"]

[dependencies]
wasm-bindgen = "0.2.78"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
k256 = { version = "0.10", features = ["ecdsa"] }
hex = "0.4"
web-sys = { version = "0.3", features = ["console"] }

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["default"]
